# StarTracker

./: .gitignore  README.md  app.py  camera.py  main.py  motor.py  pyproject.toml
src/astropi/: __init__.py  cli.py  motor.py
src/astropi.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  top_level.txt
static/: index.html  main.js  style.css
